--- a/vcweb/core/templates/includes/sockjs.html
+++ b/vcweb/core/templates/includes/sockjs.html
@@ -1,6 +1,4 @@
 <script type="text/javascript" src="https://d1fxtkz8shb9d2.cloudfront.net/sockjs-0.3.js"></script>
-<!--<script type="text/javascript" src="http://cdn.sockjs.org/sockjs-0.3.min.js"></script>-->
-<!--<script type="text/javascript" src="{{STATIC_URL}}js/sockjs-0.3.min.js"></script>-->
 <script type="text/javascript">
 var socket;
 var DEFAULT_PORT = {{WEBSOCKET_PORT|default_if_none:8882}};
@@ -23,14 +21,13 @@ function connect(uri, port) {
     console.log("Establishing connection to " + sockjsServer);
     socket = new SockJS(sockjsServer);
     socket.onopen = function() {
-        console.log('default vcweb sockjs open');
         socket.send(createConnectionEvent());
     };
     socket.onmessage = function(e) {
         console.log('received message', e.data);
     };
     socket.onclose = function() {
-        console.log('default vcweb sockjs closed');
+        console.log('sockjs connection closed');
     };
     console.log("connecting to " + host + ":" + port + uri);
     return socket;
