fixing bugs in deceased participant checking and clamping storage to 0 on the server-side if it goes negative (after flagging participant as deceased)

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -404,7 +404,7 @@ clicking "Ok, I'm Ready" until the 1-minute time limit is up.
             <tr>
                 <td>Earnings</td>
                 <!-- ko foreach: playerData -->
-                <td data-bind='text: clampedStorage, css: { "current-player": id() === $root.participantGroupId() }'></td>
+                <td data-bind='text: Math.max(0, storage()), css: { "current-player": id() === $root.participantGroupId() }'></td>
                 <!-- /ko -->
             </tr>
             <tr>
